# crabbar

./: Cargo.toml  flake.nix
src/: battery.rs  config.rs  main.rs  pulse_wrapper.rs
src/hyprland/: mod.rs
src/hyprland/ctl/: mod.rs
src/hyprland/socket2/: events.rs  listener.rs  mod.rs
src/widgets/: active_window.rs  battery.rs  cpu.rs  image.rs  label.rs  layout.rs  memory.rs  mod.rs  network.rs  sound.rs  time.rs  workspaces.rs
