[package]
name = "crabbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-broadcast = "0.7.0"
chrono = "0.4.38"
futures-util = { version = "0.3.30", features = ["io"] }
gtk = { package = "gtk4", version = "0.8.2", features = ["v4_12"] }
gtk4-layer-shell = "0.3.0"
pollster = "0.3.0"
pulse = { package = "libpulse-binding", version = "2.28.1" }
pulse_glib = { package = "libpulse-glib-binding", version = "2.28.1" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = { version = "0.30.12", default-features = false, features = [] }

