[package]
name = "crabbar"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-broadcast = "0.7.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "iana-time-zone",
] }
futures-util = { version = "0.3.30", features = ["io"] }
gtk4-layer-shell = "0.5.0"
pollster = "0.4.0"
pulse = { package = "libpulse-binding", version = "2.28.1" }
pulse_glib = { package = "libpulse-glib-binding", version = "2.28.1" }
relm4 = { version = "0.9.1", default-features = false, features = [
    "gnome_42",
    "macros",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = { version = "^0.34", default-features = false, features = [
    "system",
    "network",
] }
thiserror = "2.0.11"

[profile.release]
lto = true
